# boogiewoogie

./: .gitignore  AritistBuilder.cpp  AritistBuilder.hpp  CMakeLists.txt  FileProxy.cpp  FileProxy.hpp  FileReader.cpp  FileReader.hpp  MapActionHandler.cpp  MapActionHandler.hpp  README.md  WebReader.cpp  WebReader.hpp  main.cpp
Algorithms/: Dijkstra.cpp  Dijkstra.hpp  Pathfinder.hpp
BoogieApp/dummydata/: DummyTile.hpp
Builders/: AritistBuilder.cpp  Builder.cpp  Builder.hpp  MapBuilder.cpp  MapBuilder.hpp  TileBuilder.cpp  TileBuilder.hpp
Collision/: Colission.cpp  Colission.hpp
FileReading/: DiskReader.cpp  FileProxy.cpp  FileProxy.hpp  FileReader.cpp  FileReader.hpp  WebReader.cpp  WebReader.hpp
Files/: artists.csv
Parsing/: CSVParser.cpp  CSVParser.hpp  Parser.cpp  Parser.hpp  TXTParser.cpp  TXTParser.hpp  XMLParser.hpp
assets/: artist.csv  map.csv
assets/artists/: artists.csv
assets/map/: graph.xml  grid.txt  testgraph.xml  testgrid.txt
libs/SDL2/include/SDL2/: SDL_main.h
libs/pugixml/: CMakeLists.txt
logs/: test_logs.txt
parsing/include/: CSVParser.hpp  TXTParser.hpp
src/: ArtistManager.hpp  BoogieWoogieApp.cpp  BoogieWoogieApp.hpp  CMakeLists.txt  TileManager.cpp  TileManager.hpp  gather.cmake
src/algorithms/collision/: Colission.hpp
src/algorithms/pathfinding/: Dijkstra.cpp  Dijkstra.hpp  Pathfinder.cpp
src/builders/: AritistBuilder.cpp  CMakeLists.txt  MapBuilder.cpp
src/builders/include/: AritistBuilder.hpp  Builder.hpp  MapBuilder.hpp
src/core/: ArtistManager.cpp  BoogieWoogieApp.cpp  Caretaker.cpp  FileDialogModule.cpp  Memento.cpp  MementoManager.cpp  MementoManager.hpp  TileManager.cpp  Window.cpp
src/core/include/: ArtistManager.hpp  BoogieWoogieApp.hpp  Caretaker.hpp  Memento.hpp  TileManager.hpp  Window.hpp
src/data/: Artist.cpp  BlueType.cpp  GreyType.cpp  RedType.cpp  TileType.cpp  YellowType.cpp
src/data/include/: Artist.hpp  BlueType.hpp  DataEntry.hpp  GreyType.hpp  Map.hpp  RedType.hpp  Shape.hpp  Tile.hpp  TileType.hpp  WhiteType.hpp  YellowType.hpp
src/dummydata/: DummyArtist.cpp  DummyArtist.hpp  DummyTile.hpp  Map.hpp
src/dummydata/include/: Shape.hpp
src/file-reading/: WebReader.cpp
src/file-reading/include/: DiskReader.hpp  FileReader.hpp  WebReader.hpp
src/file_parsers/: CsvParser.cpp  CsvParser.hpp  Parser.hpp  TxtParser.cpp  TxtParser.hpp  XmlParser.cpp  XmlParser.hpp
src/file_parsers/include/: CsvParser.hpp  TxtParser.hpp  XmlParser.hpp
src/file_readers/: DiskReader.cpp  FileReader.hpp  FileReaderFactory.cpp  FileReaderFactory.hpp  WebReader.cpp  WebReader.hpp
src/file_readers/include/: DiskReader.hpp
src/fileparsing/: DiskReader.cpp  DiskReader.hpp  FileReader.hpp  FileReaderFactory.cpp  FileReaderFactory.hpp  WebReader.cpp  WebReader.hpp
src/fileparsing/file_parsers/: CsvParser.cpp  CsvParser.hpp  Parser.hpp  TxtParser.cpp  TxtParser.hpp
src/fileparsing/file_readers/: DiskReader.hpp  FileReader.hpp  FileReaderFactory.cpp  WebReader.cpp
src/input_handler/: Action.hpp  AdjustBoxAtMousePointer.cpp  AdjustBoxAtMousePointer.hpp  InputHandler.cpp  InputHandler.hpp  MouseAndKeyboard.cpp  MouseAndKeyboard.hpp  MoveArtists.cpp  MoveArtists.hpp  OpenFile.cpp  PauseArtist.cpp  QuitWindow.cpp  RedoSnapshot.cpp  RenderArtists.cpp  RenderArtists.hpp  TileInteraction.cpp  UndoSnapshot.cpp  UndoSnapshot.hpp
src/input_handler/include/: Action.hpp  InputHandler.hpp  OpenFile.hpp  PauseArtists.hpp  QuitWindow.hpp  RedoSnapshot.hpp  RenderArtists.hpp  TileInteraction.hpp  UndoSnapshot.hpp
src/memento/: Caretaker.cpp  Memento.cpp  MementoManager.cpp
src/memento/include/: Caretaker.hpp  CircularBuffer.hpp  Memento.hpp  MementoManager.hpp
src/parsing/: XMLParser.cpp
src/parsing/include/: CSVParser.hpp  Parser.hpp  TXTParser.hpp  XMLParser.hpp
src/renderer/: BoogieRenderer.cpp  BoogieRenderer.hpp  Caretaker.cpp
src/renderer/include/: BoogieRenderer.hpp  Caretaker.hpp  CircularBuffer.hpp  Memento.hpp
src/testing/: FileReadTest.cpp  FileReadTest.hpp  TestLogger.hpp  TestSuite.cpp  TestSuite.hpp
src/testing/filereading/: FileReadTest.cpp  FileReadTest.hpp
testing/: FileReadTest.cpp  ParserSuite.cpp  ParserSuite.hpp  TestMain.cpp  TestSuite.cpp  TestSuite.hpp
testing/builders/: FixtureArtistBuilder.cpp  FixtureArtistBuilder.hpp  FixtureMapBuilder.cpp  FixtureMapBuilder.hpp  MapBuilder.cpp  MapBuilder.hpp
testing/filereading/: FileReadTest.cpp  FileReadTest.hpp
testing/parser/: CSVParser.cpp  ParserSuite.hpp  TXTFixture.cpp  XMLFixture.cpp
